<resources>
    <string name="app_name">Structured Data Demo</string>
    <string name="file_size_format">(%1$s / %2$s compressed)</string>
    <string name="average_decode_time">Avg. Decode Time:</string>
    <string name="average_encode_time">Avg. Encode Time:</string>
    <string name="number_of_decodes">Number of Decode runs:</string>
    <string name="number_of_encodes">Number of Encode runs:</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="kingdom_label">Kingdom:</string>
    <string name="class_label">Class:</string>
    <string name="order_label">Order:</string>
    <string name="phylum_label">Phylum:</string>
    <string name="genus_label">Genus:</string>
    <string name="empty_list">No records</string>
    <string name="decoding">Decoding…</string>
    <string name="encoding">Encoding…</string>
    <string name="no_data_yet">No data yet</string>
    <string name="decode_failed">Decode failed</string>
    <string name="encode_failed">Encode failed</string>
    <string name="species_image_content_description">Species image</string>
    <string name="stats">Stats</string>
    <string name="statistics">Statistics</string>
    <string name="delete_stats">Delete all stats</string>
    <string name="no_stats_yet">No stats yet. Run some decodes/encodes to view stats.</string>
    <string name="average_times_graph">Decode/Encode Average Times</string>
    <string name="file_sizes_graph">File Sizes</string>
    <string name="average_decode_times">Average Decode Times</string>
    <string name="average_encode_times">Average Encode Times</string>
    <string name="uncompressed">Uncompressed Sizes</string>
    <string name="compressed">G-zipped Sizes</string>
    <string name="scientific_name_label">Scientific Name:</string>
    <string name="according_to_label">According to:</string>
    <string name="last_interpreted_label">Last Interpreted:</string>
    <string name="last_crawled_label">Last Crawled:</string>
    <string name="link_format">http://www.gbif.org/species/%1$d</string>
    <plurals name="num_deleted_format">
        <item quantity="one">Deleted stats for %1$d parsing method.</item>
        <item quantity="other">Deleted stats for %1$d parsing methods.</item>
    </plurals>
</resources>
